# mndot-bid-etl

./: .gitignore  .pylintrc  README.md  download_data.py  item_list_parsing_debug.ipynb  print_item_list.py  process_spec_year.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/csv/: 2021.txt  2022.txt  README.md
mndot_bid_etl/: __init__.py  dtype.py
mndot_bid_etl/extract/: abstract.py  abstract_csv.py  download_csv.py  fetch_contract_ids.py  item_list_csv.py  split_csv.py
mndot_bid_etl/reader/: abstract.py  item.py
mndot_bid_etl/transform/: abstract.py  abstract_spec_year_sandbox.ipynb  bid.py  bid_sandbox.ipynb  bidder.py  bidder_sandbox.ipynb  contract.py  contract_sandbox.ipynb  debug_bid.ipynb  item.py  item_list.py  item_sandbox.ipynb  schema.py  spec_year.py  spec_year_sandbox.ipynb  test_transform_bid.ipynb  test_transformers.ipynb  transform_bid.py  transform_bidder.py  transform_contract.py  transform_item.py  transformation.py  transformer.py
notebooks/: abstract_spec_year_sandbox.ipynb  api_bid_transformation.ipynb  api_bidder_transformation.ipynb  api_contract_transformation.ipynb  api_item_transformation.ipynb  api_spec_year_analyzer.ipynb  api_spec_year_matrix.ipynb  bid_sandbox.ipynb  bidder_sandbox.ipynb  debug_bid.ipynb  item_list_parsing_debug.ipynb  spec_year_sandbox.ipynb  test_transformers.ipynb
planning/: data_model.py  process_model.py
tests/: __init__.py  test_cast_columns.py  test_filter_columns.py  test_melt.py  test_mndot_bid_etl.py  test_modify_values.py  test_rename_columns.py
(+10 files in other folders)
